// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Address Lookup Component if address is not present should take a snapshot of the whole page 1`] = `
<div>
  <p
    id="lookup-address"
  >
    An address must be added for this storage facility.
  </p>
  <p
    id="address-link-wrapper"
  >
    <a
      class="change-address-link"
      href="/create-storage-document/GBR-2021-SD-67C7DC640/what-storage-facility-address/1"
      id="add-lookup-address-link"
    >
      Add the storage facility address
    </a>
  </p>
</div>
`;

exports[`Lookup Address Component if address is present should take a snapshot of the whole page when address 1`] = `
<div>
  <p
    id="lookup-address"
  >
    LANCASTER HOUSE, HAMPSHIRE COURT
    <br />
    NEWCASTLE UPON TYNE
    <br />
    E11JR
  </p>
  <p
    id="address-link-wrapper"
  >
    <a
      class="change-address-link"
      href="/create-storage-document/GBR-2021-SD-67C7DC640/what-storage-facility-address/1"
      id="change-lookup-address-link"
    >
      Change
      <span
        class="govuk-visually-hidden"
      >
        storage facility
         
        address
      </span>
    </a>
  </p>
</div>
`;
